# oFlair

./: .gitignore  README.md  claude.md  doc.md  next.config.ts  package-lock.json  package.json  vitest.config.ts
.claude/: settings.local.json
.github/workflows/: tauri-build.yml
prisma/: dev.db  dev.db-journal  schema.prisma
prisma/migrations/20260127151858_init/: migration.sql
prisma/migrations/20260128170802_add_conversion_history/: migration.sql
samples/: sample_batch_jobs.xml  sample_file_processing.xml  sample_multi_folder.xml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/__tests__/: parser.test.ts  rules.test.ts  schedule-converter.test.ts  template-matcher.test.ts  validator.test.ts
src/app/: layout.tsx
src/app/(dashboard)/: layout.tsx  page.tsx
src/cli/: index.ts
src/components/converter/: conversion-report.tsx  dependency-graph.tsx  file-uploader.tsx  job-preview.tsx  output-viewer.tsx
src/components/shared/: app-sidebar.tsx
src/hooks/: use-storage.ts
src/lib/converter/: custom-rules-engine.ts  dag-divider.ts  export.ts  index.ts  report.ts  rules.ts  schedule-converter.ts  timetable-generator.ts  validator.ts
src/lib/generator/: dag-generator.ts  index.ts
src/lib/parser/: index.ts  (+2 more)
src/store/: converter-store.ts  template-store.ts
src/types/: airflow.ts  controlm.ts  index.ts  template.ts
templates/: azure-blob-operator.yaml  bash-operator.yaml  email-operator.yaml  empty-operator.yaml  file-sensor.yaml  kubernetes-pod-operator.yaml  python-operator.yaml  ssh-operator.yaml
(+13 files in other folders)
