[package]
name = "oflair"
version = "0.1.0"
description = "Control-M to Airflow Converter"
authors = ["bangmodtech"]
edition = "2021"

[lib]
name = "oflair_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
